--- a/xkcd/comic/static/styles.css
+++ b/xkcd/comic/static/styles.css
@@ -7,7 +7,7 @@ h1{
 }
 
 body{
-    background-color:rgb(101, 101, 128);
+    background-color:white;
     color: #000;
     font-family: Arial, sans-serif;
     margin: 0;
