--- a/xkcd/comic/static/styles.css
+++ b/xkcd/comic/static/styles.css
@@ -1,6 +1,9 @@
+
+/* STRONGLY TYPED CSS AS A FALL BACK*/
+/* 
 h1{
     font-size: 2em;
-    color:rgb(79, 168, 97);
+    color:rgb(1, 5, 21);
     text-align: center;
     margin-top: 2;
     margin-bottom: 0;
@@ -20,3 +23,12 @@ p{
     margin-top: 0;
     margin-bottom: 0;
 }
+
+.comic-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 20px;
+}
+*/
