--- a/xkcd/comic/templates/comic/layout.html
+++ b/xkcd/comic/templates/comic/layout.html
@@ -7,20 +7,52 @@
         <title>Comic</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{% static 'styles.css' %}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+         <!--Uncomment line Below to us the strongly typed CSS in in the static folder-->
+        <!--- <link rel="stylesheet" href="{% static 'styles.css' %}"> --> 
     </head>
     <body>
+        <!-- SECTION: Navbar Start -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">BetterComic</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <!--
+                  Use this exmaple below here to create more Navbar links
+                   <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  </li>
+                  -->  
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search comic issue" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+         <!-- SECTION: Navbar End -->
 
+         <!-- SECTION Python: This section is where we insert our changing python body content in subsequent pages-->
         {% block body %}
-        {% endblock %}   
+        {% endblock %}    
+        <!-- SECTION Python: End --> 
 
-
-
-        
+         <!-- SECTION:footer -->
         <footer>
             <p>© 2021 Xkcd Comic</p>
-
         </footer>
-        <script src="{%static "app.js"%}"></script>
+         <!-- SECTION:End  -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+        <!--Uncomment line Below to us the strongly typed  JavaScript in in the static folder-->
+        <!-- <script src="{%static "app.js"%}"></script> --> 
     </body>
 </html>
