--- a/xkcd/comic/templates/comic/layout.html
+++ b/xkcd/comic/templates/comic/layout.html
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-         <!--Uncomment line Below to us the strongly typed CSS in in the static folder-->
+         <!--Uncomment line Below to use the strongly typed CSS in in the static folder-->
         <!--- <link rel="stylesheet" href="{% static 'styles.css' %}"> --> 
     </head>
     <body>
@@ -52,7 +52,7 @@
         </footer>
          <!-- SECTION:End  -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-        <!--Uncomment line Below to us the strongly typed  JavaScript in in the static folder-->
+        <!--Uncomment line Below to use the strongly typed  JavaScript in in the static folder-->
         <!-- <script src="{%static "app.js"%}"></script> --> 
     </body>
 </html>
